# ariadne

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  DONE  Doxyfile  DoxyfileEvaluationModuleOnly  DoxyfileRelatedPagesOnly  INSTALL  Makefile  Makefile-Custom  Makefile-GCC  Makefile.am  README.md  TODO  ariadne.h  ariadne.hpp  ariadne.prj  ariadne.xmi  ariadne_filter  ariadne_filter.sed  bootstrap  config.h.cmake  config.hpp.cmake  config.mk  configure.ac  g++filter.sed  gdb_printers.py  macros.sty
cifparser/: Makefile.am  cif_bison.yy  cif_flex.ll  cifparser.cc  ciftypes.cc  ciftypes.h  test-ball.cif  test-ball2.cif  test-bottle.cif  test-pss.cif  test-tank.cif  test-tank2.cif  test02.cif
examples/: 3bouncingballs.cc  CMakeLists.txt  Makefile  Makefile.am  automatic_differentiation.cc  ballinabox.cc  ballinabox.cpp  boost_power_converter.cc  bouncing_ball_3var.cc  bouncingball-compositional.cc  bouncingball-new.cc  bouncingball.cc  bouncingball.cpp  cmos_inverter_analoginput.cc  coconut-demo.cc  coconut-demo.h  coconut-final-demo.cc  coconut-system.h  ecoli.cc  examples.h  fb_refinement.cc  grid-refinement.cc  heating.cc  heating.cpp  henon_chainreach.cc  henon_map.cc  hybrid_system_tutorial.cpp  impact_oscillator.cc  lorenz_attractor.cc  lorenz_system.cc  model2.cc  multipleguards.cc  powermanagement.cc  pss-revised.cc  rectifier.cc  rectifier.cpp  rectifier_oneloc.cc  refrigerator.cc  rigorous_numerics_tutorial.cpp  robotarm-verification-essay.cc  (+51 more)
experimental/: CMakeLists.txt  README.md  control_validator.cc  control_validator.cpp  dynamic_game.cc
hybrid/: CMakeLists.txt  cif_hybrid_automaton.h  cif_hybrid_automaton.hpp  discrete_event.h  discrete_location.cc  discrete_location.cpp  discrete_location.h  hybrid_automata.h  hybrid_automaton-atomic.h  hybrid_automaton-composite.cc  hybrid_automaton-composite.cpp  hybrid_automaton-composite.h  hybrid_automaton-monolithic.cc  hybrid_automaton-monolithic.h  hybrid_automaton-restrictive.cc  hybrid_automaton-restrictive.cpp  hybrid_automaton-restrictive.h  hybrid_automaton-restrictive.hpp  hybrid_automaton.cc  hybrid_automaton.cpp  hybrid_automaton.h  hybrid_automaton_interface.h  hybrid_enclosure.cc  hybrid_enclosure.cpp  hybrid_enclosure.h  hybrid_enclosure.hpp  hybrid_evolver.cc  hybrid_evolver.cpp  hybrid_evolver.h  hybrid_evolver.hpp  hybrid_evolver_interface.h  hybrid_expression_set.h  hybrid_expression_set.hpp  hybrid_graphics.cc  hybrid_graphics.cpp  hybrid_graphics.h  hybrid_graphics.hpp  hybrid_graphics_interface.h  hybrid_grid.h  hybrid_grid.hpp  (+28 more)
include/: Makefile.am  affine.h  affine_map.h  affine_model.h  affine_set.h  affine_transformation.h  affine_vector_field.h  algebra.h  algebra_interface.h  algebra_mixin.h  analyser.h  analyser_interface.h  apply.h  approx_type.h  approximate_set.h  approximate_taylor_model.h  approximator_interface.h  arc.h  ariadne.h  arithmetic.h  array.h  assignment.h  attribute.h  automaton.h  basic_maintainer.h  basic_set.h  basic_set_list.h  basic_type.h  binary_tree.h  binary_word.h  box.h  buffer.h  c1_taylor_function.h  calculus_base.h  calculus_interface.h  cif_hybrid_automaton.h  classes.h  cluster_list.h  colour.h  config.h  (+218 more)
python/: CMakeLists.txt  MANIFEST.in  Makefile  Makefile.am  README.md  algebra_module.cpp  ariadne.cc  ariadne_module.cc  ariadne_module.cpp  boost_python.hpp  bouncingball-new.py  calculus_submodule.cpp  constrained_image_set.py  container_utilities.h  differentiation_submodule.cpp  evaluation_module.cc  evolution_submodule.cpp  export_apply.cc  export_function.cc  export_grid.cc  export_henon_map.cc  export_interval.cc  export_list_set.cc  export_matrix.cc  export_numeric.cc  export_parallelopiped.cc  export_partition_tree.cc  export_point.cc  export_polyhedron.cc  export_polynomial_map.cc  export_rectangle.cc  export_simplex.cc  export_state.cc  export_vector.cc  formula.py  function.cc  function_submodule.cpp  geometry.cc  geometry_module.cc  geometry_submodule.cpp  (+34 more)
source/: CMakeLists.txt  ariadne.hpp  ariadne_main.hpp
src/: CMakeLists.txt  Makefile  Makefile.am  affine.cc  affine_model.cc  affine_set.cc  algebra.cc  algebra_mixin.tcc  analyser.cc  approx_type.cpp  approximate_set.cc  approximate_taylor_model.cc  arc.cpp  ariadne.pc.in  automaton.cpp  basic_set_list.cpp  binary_tree.cc  box.cc  c1_taylor_function.cc  constraint_solver.cc  continuous_evolver.cc  curve.cc  decimal.cc  dense_differential.cc  differential.cc  differential_calculus.cc  discrete_evolver.cc  discretiser.cc  drawer.cc  dynamical_toolbox.cc  enclosure.cc  expression.cc  expression_set.cc  float-approximate.cc  float-validated.cc  float.cc  formula.cc  function.cc  function_mixin.tcc  function_set.cc  (+80 more)
test/: CMakeLists.txt  Makefile  Makefile.am  check_algebra.h  check_algebra.hpp  check_function.cc  check_function.cpp  check_function.h  check_function.hpp  check_number.h  check_number.hpp  check_numeric.cc  check_numeric.cpp  profile_arithmetic.cc  profile_arithmetic.cpp  profile_taylor_calculus.cc  profile_taylor_model.cc  profile_taylor_model.cpp  profile_taylor_set.cc  profile_taylor_variable.cc  run_profile.sh  test.h  test.hpp  test_affine_integrator.cc  test_affine_model.cc  test_affine_sets.cc  test_affine_sets.cpp  test_affine_variable.cc  test_applicator.cc  test_apply.cc  test_approximate_taylor_model.cc  test_arithmetic.cc  test_array.cc  test_binary_tree.cpp  test_binary_word.cc  test_boost.cc  test_boost_interval.cc  test_box.cc  test_box.cpp  test_c1_taylor_function.cc  (+184 more)
tests/: CMakeLists.txt  check_algebra.hpp  check_function.cpp  check_function.hpp  check_number.hpp  check_numeric.cpp  profile_taylor_model.cpp  run_test.sh  test.hpp  test_affine_sets.cpp  test_binary_tree.cpp  test_box.cpp  test_constraint_solver.cpp  test_continuous_evolution.cpp  test_crossings_issue.cpp  test_differential.cpp  test_differential_inclusion.cpp  test_discrete_evolution.cpp  test_dyadic.cpp  test_expansion.cpp  test_expression.cpp  test_float.cpp  test_formula.cpp  test_function.cpp  test_function_sets.cpp  (+35 more)
(+3211 files in other folders)
